--- a/shop.css
+++ b/shop.css
@@ -2,22 +2,26 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Open Sans", sans-serif;
+  font-family: var(--font);
 }
 
-body {
+:root {
+  --primay-color: hsl(0, 0%, 100%);
+  --secondary-color: hsl(0, 0%, 0%);
+  --aliceblue: hsl(208, 100%, 97%);
+  --gray: hsl(208, 100%, 97%);
+  --font: "Open Sans", sans-serif;
 }
-#navbar {
+
+.navbar {
   display: flex;
   background-color: transparent;
   position: fixed;
   gap: 50px;
   padding-top: 50px;
 }
-#navbar::-webkit-scrollbar {
-  background-color: #000;
-}
-#nav-list {
+
+.nav-list {
   display: flex;
   list-style-type: none;
   gap: 20px;
@@ -25,22 +29,22 @@ body {
   left: 30%;
 }
 
-#nav-list a {
+.nav-list a {
   text-decoration: none;
-  color: #000;
+  color: var(--secondary-color);
 }
 
-#search {
+.search {
   position: relative;
   left: 170%;
 }
 
-#cart {
+.cart {
   position: relative;
   left: 150%;
 }
 
-#logo {
+.logo {
   position: relative;
   left: 190px;
   top: -20%;
@@ -55,17 +59,10 @@ body {
   margin-left: 13%;
 }
 
-#card1 {
+.card1 {
   text-align: center;
   font-family: "Poppins", sans-serif;
 }
-
-/* #five {
-  display: flex;
-  gap: 5%;
-  margin-top: 10%;
-  margin-left: 11%;
-}*/
 
 #six {
   text-align: center;
@@ -80,8 +77,8 @@ span {
   font-size: 29px;
 }
 
-#btn-1 {
-  border: 1px solid black;
+.btn-1 {
+  border: 1px solid var(--secondary-color);
   border-radius: 20px;
   padding: 10px 30px;
   background-color: transparent;
@@ -89,7 +86,7 @@ span {
 
 footer {
   height: 480px;
-  background-color: #000;
+  background-color: var(--secondary-color);
 }
 
 #foot {
@@ -98,31 +95,31 @@ footer {
   margin-top: 5%;
   height: 400px;
   width: 100%;
-  background-color: black;
-  color: white;
+  background-color: var(--secondary-color);
+  color: var(--primay-color);
 }
 
-#foot-1 {
+.foot-1 {
   margin-top: 2%;
   margin-left: 10%;
 }
 
-#foot-2 {
+.foot-2 {
   margin-top: 3%;
   margin-left: 0%;
 }
 
-#foot-3 {
+.foot-3 {
   margin-top: 3%;
   margin-left: 0%;
 }
 
-#foot-4 {
+.foot-4 {
   margin-top: 3%;
   margin-left: 9%;
 }
 
-#input {
+.input {
   border: none;
   background-color: transparent;
 }
@@ -130,43 +127,42 @@ footer {
 .line {
   width: 100%;
   height: 1px;
-  background-color: white;
+  background-color: var(--primay-color);
 }
 
 #line {
   margin-top: -15%;
   width: 100%;
   height: 1px;
-  background-color: white;
+  background-color: var(--primay-color);
 }
 
-#support {
-  color: white;
+.support {
+  color: var(--primay-color);
   margin-left: 10%;
   margin-top: 5%;
 }
-#meet {
-  color: white;
+.meet {
+  color: var(--primay-color);
   margin-left: 5%;
   margin-top: 5%;
 }
 
-#social {
-  color: white;
+.social {
+  color: var(--primay-color);
   margin-left: 40%;
   margin-top: 5%;
 }
 
 a {
   text-decoration: none;
-  color: gray;
+  color: var(--gray);
   font-size: small;
 }
 
 li {
   list-style-type: none;
 }
-
 #help {
   display: flex;
 }
@@ -178,7 +174,7 @@ li {
 }
 
 @media (max-width: 1200px) {
-  #search {
+  .search {
     margin-left: -50%;
   }
 
@@ -203,75 +199,75 @@ li {
     margin-left: 5.5%;
   }
 
-  #card1 img {
+  .card1 img {
     width: 524px !important;
     height: 524px !important;
   }
 }
 
 @media (max-width: 776px) {
-  #card1 img {
+  .card1 img {
     width: 334px !important;
     height: 334px !important;
   }
 
-  #logo {
+  .logo {
     margin-left: -130px;
   }
 
-  #nav-list {
+  .nav-list {
     margin-left: -10%;
   }
-  #search {
+  .search {
     margin-left: -100%;
   }
-  #cart {
+  .cart {
     margin-left: -4%;
   }
 
-  #foot-1 {
+  .foot-1 {
     margin-left: 4%;
     margin-top: 8%;
   }
 
-  #foot-2 {
+  .foot-2 {
     margin-top: 8%;
     width: 20%;
     margin-left: 9%;
   }
 
-  #foot-3 {
+  .foot-3 {
     margin-top: 8%;
     width: 20%;
   }
 
-  #foot-4 {
+  .foot-4 {
     margin-top: 8%;
     width: 50%;
   }
 
-  #foot-4 p {
+  .foot-4 p {
     margin-left: -50%;
   }
 
-  #foot-1 h1 {
+  .foot-1 h1 {
     font-size: 29px !important;
   }
 
-  #help {
+  .help {
     height: 230px;
     background-color: #000;
   }
 
-  #support {
+  .support {
     margin-left: 5%;
   }
 
-  #meet {
+  .meet {
     width: 50%;
   }
 
-  #social {
+  .social {
     margin-left: 0%;
   }
 }
@@ -283,15 +279,15 @@ li {
     margin-left: 20%;
   }
 
-  #search {
+  .search {
     margin-left: -130%;
   }
 
-  #nav-list {
+  .nav-list {
     margin-left: -70px;
   }
 
-  #logo {
+  .logo {
     margin-left: -150px;
   }
 
@@ -304,7 +300,7 @@ li {
     margin-top: 0%;
   }
 
-  #foot-2 {
+  .foot-2 {
     margin-left: 5%;
     margin-top: 3%;
   }
@@ -313,34 +309,34 @@ li {
     width: 400px;
   }
 
-  #foot-3 {
+  .foot-3 {
     margin-left: 5%;
     margin-top: 3%;
   }
 
-  #foot-4 {
+  .foot-4 {
     margin-left: 50%;
     margin-top: 3%;
   }
 
-  #foot-1 h1 {
+  .foot-1 h1 {
     font-size: 20px !important;
   }
 
-  #help {
+  .help {
     height: 220px;
     background-color: #000;
   }
 
-  #support {
+  .support {
     margin-left: 5%;
   }
 
-  #meet {
+  .meet {
     width: 50%;
   }
 
-  #social {
+  .social {
     margin-left: -10%;
   }
 }
